Renamed endpoints.  Updated SmartAPI YAML. Data Admin group membership required to view file info documents.
