# files-api-spec.yaml
@@ -20,7 +20,7 @@ components:
       description: Globus bearer token to authorize requests. Have to use apiKey to pass AWS API Gateway import validation
   schemas:
 paths:
-  '/{id}/files':
+  '/entities/{id}/files':
     get:
       summary: Get the information about files attached to an entity, given an entity identifier (e.g. HBM123.ABCD.456 or UUID.)
       parameters:
@@ -60,256 +60,6 @@ paths:
                       description: One of DATA_UPLOAD|INGEST_PORTAL_UPLOAD. INGEST_PORTAL_UPLOAD means the file was uploaded into the space for file uploads from the Ingest UI.  DATA_UPLOAD means the file was upload into the upload space for datasets, usually via Globus
         '303':
           description: The response is too large for the endpoint to return, and must be retrieved from an AWS S3 bucket within one hour, at the URL in response. The bucket will contain the same JSON content as described for an HTTP 200 response.'
-        '401':
-          description: The user's token has expired or the user did not supply a valid token
-        '403':
-          description: The user is not authorized to use this method
-        '404':
-          description: The target id could not be found
-        '500':
-          description: An unexpected error occurred
-  '/{id}/dataset-file-infos':
-    get:
-      summary: Get an array of "file info" documents for each file attached to an entity, given an entity identifier (e.g. HBM123.ABCD.456 or UUID.)
-      parameters:
-        - name: id
-          in: path
-          description: Either an HuBMAP ID (e.g. HBM123.ABCD.456) or UUID
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: A JSON array containing a "file info" object for each file attached to the entity. Each object becomes an Elasticsearch document.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    file_uuid:
-                      type: string
-                      description: The uuid of the file
-                    checksum:
-                      type: string
-                      description: The hexidecimal representation of the MD5 checksum of the file
-                    size:
-                      type: integer
-                      description: Integer size of the file in bytes
-                    rel_path:
-                      type: string
-                      description: The local file system path of the file relative to its Dataset directory, including the file name
-                    file_extension:
-                      type: string
-                      description: The part of rel_path after the final period in the file name, which is after the final directory separator
-                    samples:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          uuid:
-                            type: string
-                            description: The uuid of a Sample entity whose specimen type is not 'organ', which is an ancestor of the file
-                          code:
-                            type: string
-                            description: A code for the specimen type from the "tissue sample types". Examples are enumerated below, but the current, authoritative list is [from the search-api](https://raw.githubusercontent.com/hubmapconsortium/search-api/main/src/search-schema/data/definitions/enums/tissue_sample_types.yaml).
-                            enum:
-                              - atacseq
-                              - biopsy
-                              - blood
-                              - cell_lysate
-                              - clarity_hydrogel
-                              - codex
-                              - cryosections_curls_from_fresh_frozen_oct
-                              - cryosections_curls_rnalater
-                              - ffpe_block
-                              - ffpe_slide
-                              - fixed_frozen_section_slide
-                              - fixed_tissue_piece
-                              - flash_frozen_liquid_nitrogen
-                              - formalin_fixed_oct_block
-                              - fresh_frozen_oct_block
-                              - fresh_frozen_section_slide
-                              - fresh_frozen_tissue
-                              - fresh_frozen_tissue_section
-                              - fresh_tissue
-                              - frozen_cell_pellet_buffy_coat
-                              - gdna
-                              - module
-                              - nuclei
-                              - nuclei_rnalater
-                              - organ
-                              - organ_piece
-                              - other
-                              - pbmc
-                              - pfa_fixed_frozen_oct_block
-                              - plasma
-                              - protein
-                              - ran_poly_a_enriched
-                              - rna_total
-                              - rnalater_treated_and_stored
-                              - rnaseq
-                              - scatacseq
-                              - scrnaseq
-                              - segment
-                              - seqfish
-                              - sequence_library
-                              - serum
-                              - single_cell_cryopreserved
-                              - snatacseq
-                              - snrnaseq
-                              - tissue_lysate
-                              - wgs
-
-                          type:
-                            type: string
-                            description: A description for the tissue sample type of the specimen, specified as the "code"
-                    organs:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          uuid:
-                            type: string
-                            description: The uuid of a Sample entity whose specimen type is 'organ', which is an ancestor of a Sample included in "samples"
-                          type_code:
-                            type: string
-                            description: A code for the organ type of the Dataset. Examples are enumerated below, but the current, authoritative list is [from the search-api](https://raw.githubusercontent.com/hubmapconsortium/search-api/master/src/search-schema/data/definitions/enums/organ_types.yaml).
-                            enum:
-                              - AO
-                              - BL
-                              - BD
-                              - BM
-                              - BR
-                              - LF
-                              - RF
-                              - HT
-                              - LB
-                              - LE
-                              - LI
-                              - LK
-                              - LL
-                              - LN
-                              - LV
-                              - LY
-                              - LO
-                              - RO
-                              - OT
-                              - PA
-                              - PL
-                              - RB
-                              - RE
-                              - RK
-                              - RL
-                              - RN
-                              - SI
-                              - SK
-                              - SP
-                              - ST
-                              - TH
-                              - TR
-                              - UR
-                              - UT
-                          type:
-                            type: string
-                            description: A description for the organ type of the specimen, specified as the "type_code"
-                    donors:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          uuid:
-                            type: string
-                            description: The uuid of a Donor entity which is an ancestor of a Sample included in "organs"
-                          age:
-                            type: number
-                            format: float
-                            description: A float value created from the Donor entity metadata for the [UMLS age group CUI C0001779](https://uts.nlm.nih.gov/uts/umls/concept/C0001779)
-                          units:
-                            type: string
-                            description: The unit of measure for the age concept of the Donor entity metadata
-                          race:
-                            type: string
-                            description: A UMLS preferred term from the Donor entity metadata for the [UMLS race group CUI C0034510](https://uts.nlm.nih.gov/uts/umls/concept/C0034510)
-                    dataset_uuid:
-                      type: string
-                      description: The 32 character UUID of the Dataset which is the direct ancestor of this file
-                    data_types:
-                      type: array
-                      description: A code for an assay type of the Dataset. Examples are enumerated below, but the current, authoritative list is [from the search-api](https://raw.githubusercontent.com/hubmapconsortium/search-api/main/src/search-schema/data/definitions/enums/assay_types.yaml).
-                      items:
-                        type: string
-                        enum:
-                          - AF
-                          - AF_pyramid
-                          - ATACseq-bulk
-                          - CODEX
-                          - CODEX2
-                          - DART-FISH
-                          - IMC2D
-                          - IMC2D_pyramid
-                          - IMC3D
-                          - IMC3D_pyramid
-                          - LC-MS
-                          - LC-MS-untargeted
-                          - LC-MS_bottom_up
-                          - LC-MS_top_down
-                          - Lightsheet
-                          - MALDI-IMS
-                          - MALDI-IMS_pyramid
-                          - MIBI
-                          - MS
-                          - MS_bottom_up
-                          - MS_top_down
-                          - MxIF
-                          - MxIF_pyramid
-                          - NanoDESI
-                          - NanoDESI_pyramid
-                          - NanoPOTS
-                          - NanoPOTS_pyramid
-                          - PAS
-                          - PAS_pyramid
-                          - SNARE-ATACseq2
-                          - SNARE-RNAseq2
-                          - Slide-seq
-                          - TMT-LC-MS
-                          - Targeted-Shotgun-LC-MS
-                          - WGS
-                          - bulk-RNA
-                          - bulk_atacseq
-                          - cell-dive
-                          - celldive_deepcell
-                          - codex_cytokit
-                          - codex_cytokit_v1
-                          - image_pyramid
-                          - lc-ms-ms_label-free
-                          - lc-ms-ms_labeled
-                          - lc-ms_label-free
-                          - lc-ms_labeled
-                          - mibi_deepcell
-                          - salmon_rnaseq_10x
-                          - salmon_rnaseq_bulk
-                          - salmon_rnaseq_sciseq
-                          - salmon_rnaseq_slideseq
-                          - salmon_rnaseq_snareseq
-                          - salmon_sn_rnaseq_10x
-                          - scRNAseq-10xGenomics-v2
-                          - scRNAseq-10xGenomics-v3
-                          - sc_atac_seq_sci
-                          - sc_atac_seq_snare
-                          - sc_atac_seq_snare_lab
-                          - sc_rna_seq_snare_lab
-                          - sciATACseq
-                          - sciRNAseq
-                          - seqFish
-                          - seqFish_lab_processed
-                          - seqFish_pyramid
-                          - snATACseq
-                          - snRNAseq-10xGenomics-v2
-                          - snRNAseq-10xGenomics-v3
-                          - sn_atac_seq
-
         '401':
           description: The user's token has expired or the user did not supply a valid token
         '403':
